--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Starbucks Korea</title>
 	<link rel="stylesheet" href="style/header.css">
 	<link rel="stylesheet" href="style/footer.css">
+	<link rel="stylesheet" href="style/main.css">
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/main.js"></script>
 
@@ -301,6 +302,76 @@
 		</section>
 
 	</header>
+	<!-- 메인시작////////////////////////////////// -->
+
+	<wrap>
+		<div class="main-banner-bg">
+			<ul class="main-coffee">
+				<li><img src="img/main-banner.png" alt="around autumn,around us"></li>
+				<li><img src="img/main-drink01.png" alt="블랙 글레이즈드 라떼"></li>
+				<li><img src="img/main-drink02.png" alt="그린 애플 캐모마일 티"></li>
+				<li><img src="img/main-drink03.png" alt="호두 블랙 티 라떼"></li>
+				<li class="txt-box"><a href="#">자세히 보기</a></li>
+			</ul>
+		</div>
+
+		<div class="notice">
+			<div class="notice-txt">
+				<ul class="notice-left">
+					<li>
+						<h2>공지사항</h2>
+					</li>
+					<li>
+						<ul class="notice-slide-up">
+							<li><a href="#">시스템 개선 및 점검 안내</a></li>
+							<li><a href="#">신세계 기프트 카드 등 결제 제휴 종료 안내</a></li>
+						</ul>
+					<li class="plus-btn"><a href="#">&plus;</a></li>
+				</ul>
+				<ul class="notice-right">
+					<li>
+						<h2>스타벅스 프로모션</h2>
+					</li>
+					<li><a href="#"><img src="img/btn_prom_up.png"></a></li>
+				</ul>
+			</div>
+
+			<div class="slide">
+				<ul>
+					<li><img src="img/slide-01.jpg" alt="추석 프로모션 배너"></li>
+					<li>자세히보기</li>
+				</ul>
+				<ul>
+					<li><img src="img/slide-02.jpg" alt="스타벅스 리저브 오텀 원두 배너"></li>
+					<li>자세히보기</li>
+				</ul>
+				<ul>
+					<li><img src="img/slide-03.jpg" alt="스타벅스 카드 결제 프로모션"></li>
+					<li>자세히보기</li>
+				</ul>
+				</div>
+
+				<div class="slide-btn">
+					<ul>
+						<li class="prev">&gt;</li>
+						<li class="next">&lt;</li>
+						<li class="play"><img src="img/main_prom_play.png"></li>
+						<li class="stop"><img src="img/main_prom_stop.png"></li>
+						<li><img src="img/main_prom_on.png"></li>
+						<li><img src="img/main_prom_off.png"></li>
+						<li><img src="img/main_prom_off.png"></li>
+					</ul>
+				
+			</div>
+
+
+		</div>
+
+	</wrap>
+
+
+
+
 	<!-- 풋터시작////////////////////////////////// -->
 	<footer>
 		<div class="footer-bg">
@@ -360,35 +431,35 @@
 				<li><a href=""><img src="img/footer_award6.jpg" alt="동반성장위원회 위원장상"></a></li>
 			</ul>
 		</div>
-	 <div class="bg">
+		<div class="bg">
 
-		<ul class="copyright">
-			<li><a href="#">개인정보처리방침</a></li>
-			<li><a href="#">영상정보처리기기 운영관리 방침</a></li>
-			<li><a href="#">홈페이지 이용약관</a></li>
-			<li><a href="#">위치정보 이용약관</a></li>
-			<li><a href="#">스타벅스 카드 이용약관</a></li>
-			<li><a href="#">비회원 이용약관</a></li>
-			<li><a href="#">My DT Pass서비스 이용약관</a></li>
-			<li><a href="#">윤리경영 핫라인</a></li>
-		</ul>
+			<ul class="copyright">
+				<li><a href="#">개인정보처리방침</a></li>
+				<li><a href="#">영상정보처리기기 운영관리 방침</a></li>
+				<li><a href="#">홈페이지 이용약관</a></li>
+				<li><a href="#">위치정보 이용약관</a></li>
+				<li><a href="#">스타벅스 카드 이용약관</a></li>
+				<li><a href="#">비회원 이용약관</a></li>
+				<li><a href="#">My DT Pass서비스 이용약관</a></li>
+				<li><a href="#">윤리경영 핫라인</a></li>
+			</ul>
 
-		<ul class="map">
-			<li><a href="#">찾아오시는 길</a></li>
-			<li><a href="#">신규입점제의</a></li>
-			<li><a href="#">사이트 맵</a></li>
-		</ul>
+			<ul class="map">
+				<li><a href="#">찾아오시는 길</a></li>
+				<li><a href="#">신규입점제의</a></li>
+				<li><a href="#">사이트 맵</a></li>
+			</ul>
 
-		<div class="tel">
-			<span>사업자등록번호 : 201-81-21515</span>
-			<span>주식회사 에스씨케이컴퍼니 대표이사 : 송 데이비드 호섭</span>
-			<span>TEL : 1522-3232</span>
-			<span>개인정보 책임자 : 이현수</span>
+			<div class="tel">
+				<span>사업자등록번호 : 201-81-21515</span>
+				<span>주식회사 에스씨케이컴퍼니 대표이사 : 송 데이비드 호섭</span>
+				<span>TEL : 1522-3232</span>
+				<span>개인정보 책임자 : 이현수</span>
+			</div>
+
+			<p>ⓒ 2022 Starbucks Coffee Company. All Rights Reserved.</p>
+
 		</div>
-
-		<p>ⓒ 2022 Starbucks Coffee Company. All Rights Reserved.</p>
-
-</div>
 
 	</footer>
 
