--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 				<ul id="main-menu">
 					<li><a href="#">COFFEE</a>
-						<div id="coffee">
+						<div id="slider">
 							<section class="inner">
 								<ul>
 									<li>
@@ -111,9 +111,10 @@
 
 					</li>
 					<li><a href="#">MENU</a>
-						<div>
+						<div id="slider">
+							<section class="inner">
 							<ul>
-								<h3><a href="#">음료</a></h3>
+								<li><h3><a href="#">음료</a></h3></li>
 								<li><a href="#">콜드 브루</a></li>
 								<li><a href="#">브루드 커피</a></li>
 								<li><a href="#">에스프레소</a></li>
@@ -126,7 +127,7 @@
 								<li><a href="#">스타벅스 주스(병음료)</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">푸드</a></h3>
+								<li><h3><a href="#">푸드</a></h3></li>
 								<li><a href="#">브레드</a></li>
 								<li><a href="#">케이크</a></li>
 								<li><a href="#">샌드위치 &amp; 샐러드</a></li>
@@ -136,7 +137,7 @@
 								<li><a href="#">아이스크림</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">상품</a></h3>
+								<li><h3><a href="#">상품</a></h3></li>
 								<li><a href="#">머그</a></li>
 								<li><a href="#">글라스</a></li>
 								<li><a href="#">플라스틱 텀블러</a></li>
@@ -149,55 +150,70 @@
 								<li><a href="#">시럽</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">카드</a></h3>
+								<li><h3><a href="#">카드</a></h3></li>
 								<li><a href="#">실물카드</a></li>
 								<li><a href="#">e-Gift 카드</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">메뉴 이야기</a></h3>
+								<li><h3><a href="#">메뉴 이야기</a></h3></li>
 								<li><a href="#">나이트로 콜드브루</a></li>
 								<li><a href="#">콜드 브루</a></li>
 								<li><a href="#">스타벅스 티바나</a></li>
 							</ul>
+							</section>
+							<div class="under">
+								<section>
 							<ul class="down">
-								<h4><a href="#">나이트로 콜드 브루<img src="" alt=""></a></h4>
+								<li><h4><a href="#">나이트로 콜드 브루<img src="" alt=""></a></h4></li>
 								<li class="green">나이트로 커피 정통의 물결치듯 흘러내리는 캐스케이딩과 부드러운 크림을 경험하세요</li>
 							</ul>
+							</section>
+						</div>
 						</div>
 					</li>
+
 					<li><a href="#">STORE</a>
-						<div>
+						<div id="slider">
+							<section class="inner">
 							<ul>
-								<h3><a href="#">매장찾기</a></h3>
+								<li><h3><a href="#">매장찾기</a></h3></li>
 								<li><a href="#">퀵 검색</a></li>
 								<li><a href="#">지역 검색</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">드라이브 스루 매장</a></h3>
+								<li><h3><a href="#">드라이브 스루 매장</a></h3></li>
 							</ul>
 							<ul>
-								<h3><a href="#">스타벅스 리저브 매장&trade;</a></h3>
+								<li><h3><a href="#">스타벅스 리저브 매장&trade;</a></h3></li>
 							</ul>
 							<ul>
-								<h3><a href="#">커뮤니티 스토어 매장</a></h3>
+								<li><h3><a href="#">커뮤니티 스토어 매장</a></h3></li>
 							</ul>
 							<ul>
-								<h3><a href="#">매장 이야기</a></h3>
+								<li><h3><a href="#">매장 이야기</a></h3></li>
 								<li><a href="#">티바나 바 매장</a></li>
 							</ul>
+							</section>
+							<div class="under">
+								<section>
 							<ul class="down">
-								<h4><a href="#">매장찾기</a></h4>
+								<li><h4><a href="#">매장찾기</a></h4></li>
 								<li class="green">보다 빠르게 매장을 찾아보세요</li>
 							</ul>
+							</section>
+						</div>
 						</div>
 					</li>
+
+
 					<li><a href="#">RESPONSIBILITY</a>
-						<div>
+						<div id="slider">
+							<section class="inner">
 							<ul>
-								<h3><a href="#">사회공헌 캠페인 소개</a></h3>
+								<li><h3><a href="#">사회공헌 캠페인 소개</a></h3></li>
 							</ul>
 							<ul>
-								<h3><a href="#">지역 사회 참여 활동</a></h3>
+								<li><h3><a href="#">지역 사회 참여 활동</a></h3></li>
 								<li><a href="#">희망배달 캠페인</a></li>
 								<li><a href="#">재능기부 카페 소식</a></li>
 								<li><a href="#">커뮤니티 스토어</a></li>
@@ -206,36 +222,45 @@
 								<li><a href="#">우리 문화 지키기</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">환경보호 활동</a></h3>
+								<li><h3><a href="#">환경보호 활동</a></h3></li>
 								<li><a href="#">친환경 활동</a></li>
 								<li><a href="#">일회용 컵 없는 매장</a></li>
 								<li><a href="#">커피 원두 재활용</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">윤리구매</a></h3>
+								<li><h3><a href="#">윤리구매</a></h3></li>
 								<li><a href="#">윤리적 원두 구매</a></li>
 								<li><a href="#">공정무역 인증</a></li>
 								<li><a href="#">커피 농가 지원 활동</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">글로벌 사회 공헌</a></h3>
+								<li><h3><a href="#">글로벌 사회 공헌</a></h3></li>
 								<li><a href="#">윤리경영 보고서</a></li>
 								<li><a href="#">스타벅스 재단</a></li>
 								<li><a href="#">지구촌 봉사의 달</a></li>
 							</ul>
+							</section>
+							<div class="under">
+								<section>
+									
+								</section>
+							</div>
 						</div>
 					</li>
+
+
 					<li><a href="#">STARBUCKS REWARDS</a>
-						<div>
+						<div id="slider">
+							<section class="inner">
 							<ul>
-								<h3><a href="#">스타벅스 리워드</a></h3>
+								<li><h3><a href="#">스타벅스 리워드</a></h3></li>
 								<li><a href="#">스타벅스 리워드 소개</a></li>
 								<li><a href="#">등급 및 혜택</a></li>
 								<li><a href="#">스타벅스 별</a></li>
 								<li><a href="#">자주 하는 질문</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">스타벅스 카드</a></h3>
+								<li><h3><a href="#">스타벅스 카드</a></h3></li>
 								<li><a href="#">스타벅스 카드 소개</a></li>
 								<li><a href="#">스타벅스 카드 갤러리</a></li>
 								<li><a href="#">등록 및 조회</a></li>
@@ -244,29 +269,37 @@
 								<li><a href="#">자주 하는 질문</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">스타벅스 e-Gift Card</a></h3>
+								<li><h3><a href="#">스타벅스 e-Gift Card</a></h3></li>
 								<li><a href="#">스타벅스 e-Gift Card 소개</a></li>
 								<li><a href="#">이용안내</a></li>
 								<li><a href="#">선물하기</a></li>
 								<li><a href="#">자주 하는 질문</a></li>
 							</ul>
+							</section>
+							<div class="under">
+								<section>
 							<ul class="down">
-								<h4><a href="#">스타벅스 카드 등록하기</a></h4>
+								<li><h4><a href="#">스타벅스 카드 등록하기</a></h4></li>
 								<li class="green">카드 등록 후 리워드 서비스를 누리고 사용 내역도 조회해보세요.</li>
 							</ul>
+							</section>
+							</div>
 						</div>
 					</li>
+
+
 					<li><a href="#">WHAT'S NEW</a>
-						<div>
+						<div id="slider">
+							<section class="inner">
 							<ul>
-								<h3><a href="#">이벤트</a></h3>
+								<li><h3><a href="#">이벤트</a></h3></li>
 								<li><a href="#">전체</a></li>
 								<li><a href="#">스타버스 카드</a></li>
 								<li><a href="#">스타벅스 리워드</a></li>
 								<li><a href="#">온라인</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">뉴스</a></h3>
+								<li><h3><a href="#">뉴스</a></h3></li>
 								<li><a href="#">전체</a></li>
 								<li><a href="#">상품 출시</a></li>
 								<li><a href="#">스타벅스와 문화</a></li>
@@ -274,25 +307,28 @@
 								<li><a href="#">스타벅스 카드출시</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">매장별 이벤트</a></h3>
+								<li><h3><a href="#">매장별 이벤트</a></h3></li>
 								<li><a href="#">일반 매장</a></li>
 								<li><a href="#">신규 매장</a></li>
 							</ul>
 							<ul>
-								<h3><a href="#">공지사항</a></h3>
+								<li><h3><a href="#">공지사항</a></h3></li>
 							</ul>
 							<ul>
-								<h3><a href="#">월페이퍼</a></h3>
+								<li><h3><a href="#">월페이퍼</a></h3></li>
 							</ul>
+							</section>
+							<div class="under">
+								<section>
 							<ul class="down">
-								<h4><a href="#">매장별 이벤트</a></h4>
+								<li><h4><a href="#">매장별 이벤트</a></h4></li>
 								<li class="green">스타벅스의 매장 이벤트 정보를 확인 하실 수 있습니다.</li>
-							</ul>
-							<ul class="down">
-								<h4><a href="#">월페이퍼</a></h4>
+								<li><h4><a href="#">월페이퍼</a></h4></li>
 								<li class="green">매월 업데이트되는 월페이퍼(PC/Mobile)로 스타벅스를 더욱 가깝게 즐겨보세요!
 								</li>
 							</ul>
+							</section>
+						</div>
 						</div>
 					</li>
 
@@ -304,7 +340,7 @@
 	</header>
 	<!-- 메인시작////////////////////////////////// -->
 
-	<wrap>
+	
 		<div class="main-banner-bg">
 			<ul class="main-coffee">
 				<li><img src="img/main-banner.png" alt="around autumn,around us"></li>
@@ -367,7 +403,6 @@
 
 		</div>
 
-	</wrap>
 
 
 
