--- a/index.html
+++ b/index.html
@@ -9,335 +9,13 @@
 	<link rel="stylesheet" href="style/footer.css">
 	<link rel="stylesheet" href="style/main.css">
 	<script src="js/jquery-3.6.0.min.js"></script>
-	<script src="js/main.js"></script>
+	
 
 
 </head>
 
 <body>
-	<header>
-		<section>
-			<h1 class="logo">
-				<img src="img/logo.png" alt="스타벅스 로고">
-			</h1>
-			<div class="menu">
-				<ul class="top-menu">
-					<li><a href="#">Sign In</a></li>
-					<li><a href="#">My Starbucks</a></li>
-					<li><a href="#">Customer Service &amp; Ideas</a></li>
-					<li><a href="#">Find a Store</a></li>
-					<li class="search">
-						<input id="search-box" type="text" placeholder="통합검색">
-						<a href="#"><img src="img/search.png" alt="검색"></a>
-					</li>
-				</ul>
-
-
-				<ul id="main-menu">
-					<li><a href="#">COFFEE</a>
-						<div id="slider">
-							<section class="inner">
-								<ul>
-									<li>
-										<h3><a href="#">커피</a></h3>
-									</li>
-									<li><a href="#">스타벅스 원두</a></li>
-									<li><a href="#">스타벅스 비아</a></li>
-									<li><a href="#">스타벅스앳홈 by 캡슐</a></li>
-								</ul>
-								<ul>
-									<li>
-										<h3><a href="#">나와 어울리는 커피</a></h3>
-									</li>
-								</ul>
-								<ul>
-									<li>
-										<h3><a href="#">스타벅스 리저브&trade;</a></h3>
-									</li>
-									<li><a href="#">RESERVE MAGAZINE</a></li>
-								</ul>
-								<ul>
-									<li>
-										<h3><a href="#">에스프레소 음료</a></h3>
-									</li>
-									<li><a href="#">도피오</a></li>
-									<li><a href="#">에스프레소 마키아또</a></li>
-									<li><a href="#">아메리카노</a></li>
-									<li><a href="#">마키아또</a></li>
-									<li><a href="#">카푸치노</a></li>
-									<li><a href="#">라떼</a></li>
-									<li><a href="#">모카</a></li>
-								</ul>
-								<ul>
-									<li>
-										<h3><a href="#">최상의 커피를 즐기는 법</a></h3>
-									</li>
-									<li><a href="#">커피 프레스</a></li>
-									<li><a href="#">푸어 오버</a></li>
-									<li><a href="#">아이스 푸어 오버</a></li>
-									<li><a href="#">커피 메이커</a></li>
-									<li><a href="#">리저브를 매장에서 다양하게 즐기는 법</a></li>
-								</ul>
-								<ul>
-									<li>
-										<h3><a href="#">커피 이야기</a></h3>
-									</li>
-									<li><a href="#">농장에서 우리의 손으로</a></li>
-									<li><a href="#">최상의 아라비카 원두</a></li>
-									<li><a href="#">스타벅스 로스트 스펙트럼</a></li>
-									<li><a href="#">스타벅스 디카페인</a></li>
-									<li><a href="#">클로버&reg; 커피 추출 시스템</a></li>
-								</ul>
-
-							</section>
-
-							<div class="under">
-								<section>
-									<ul class="down">
-										<li>
-											<h4><a href="#">나와 어울리는 커피 찾기</a></h4>
-										</li>
-										<li class="green">스타벅스가 여러분에게 어울리는 커피를 찾아드립니다.</li>
-										<li>
-											<h4><a href="#">최상의 커피를 즐기는 법</a></h4>
-										</li>
-										<li class="green">여러가지 방법을 통해 다양한 풍미의 커피를 즐겨보세요.</li>
-
-									</ul>
-								</section>
-							</div>
-
-						</div>
-
-					</li>
-					<li><a href="#">MENU</a>
-						<div id="slider">
-							<section class="inner">
-							<ul>
-								<li><h3><a href="#">음료</a></h3></li>
-								<li><a href="#">콜드 브루</a></li>
-								<li><a href="#">브루드 커피</a></li>
-								<li><a href="#">에스프레소</a></li>
-								<li><a href="#">프라푸치노</a></li>
-								<li><a href="#">블렌디드</a></li>
-								<li><a href="#">스타벅스 리프레셔</a></li>
-								<li><a href="#">스타벅스 피지오</a></li>
-								<li><a href="#">티(티바나)</a></li>
-								<li><a href="#">기타 제조 음료</a></li>
-								<li><a href="#">스타벅스 주스(병음료)</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">푸드</a></h3></li>
-								<li><a href="#">브레드</a></li>
-								<li><a href="#">케이크</a></li>
-								<li><a href="#">샌드위치 &amp; 샐러드</a></li>
-								<li><a href="#">따뜻한 푸드</a></li>
-								<li><a href="#">과일 &amp; 요거트</a></li>
-								<li><a href="#">스낵 &amp; 미니 디저트</a></li>
-								<li><a href="#">아이스크림</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">상품</a></h3></li>
-								<li><a href="#">머그</a></li>
-								<li><a href="#">글라스</a></li>
-								<li><a href="#">플라스틱 텀블러</a></li>
-								<li><a href="#">스테인리스 텀블러</a></li>
-								<li><a href="#">보온병</a></li>
-								<li><a href="#">액세서리</a></li>
-								<li><a href="#">선물세트</a></li>
-								<li><a href="#">커피 용품</a></li>
-								<li><a href="#">패키지 티(티바나)</a></li>
-								<li><a href="#">시럽</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">카드</a></h3></li>
-								<li><a href="#">실물카드</a></li>
-								<li><a href="#">e-Gift 카드</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">메뉴 이야기</a></h3></li>
-								<li><a href="#">나이트로 콜드브루</a></li>
-								<li><a href="#">콜드 브루</a></li>
-								<li><a href="#">스타벅스 티바나</a></li>
-							</ul>
-							</section>
-							<div class="under">
-								<section>
-							<ul class="down">
-								<li><h4><a href="#">나이트로 콜드 브루<img src="" alt=""></a></h4></li>
-								<li class="green">나이트로 커피 정통의 물결치듯 흘러내리는 캐스케이딩과 부드러운 크림을 경험하세요</li>
-							</ul>
-							</section>
-						</div>
-						</div>
-					</li>
-
-					<li><a href="#">STORE</a>
-						<div id="slider">
-							<section class="inner">
-							<ul>
-								<li><h3><a href="#">매장찾기</a></h3></li>
-								<li><a href="#">퀵 검색</a></li>
-								<li><a href="#">지역 검색</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">드라이브 스루 매장</a></h3></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">스타벅스 리저브 매장&trade;</a></h3></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">커뮤니티 스토어 매장</a></h3></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">매장 이야기</a></h3></li>
-								<li><a href="#">티바나 바 매장</a></li>
-							</ul>
-							</section>
-							<div class="under">
-								<section>
-							<ul class="down">
-								<li><h4><a href="#">매장찾기</a></h4></li>
-								<li class="green">보다 빠르게 매장을 찾아보세요</li>
-							</ul>
-							</section>
-						</div>
-						</div>
-					</li>
-
-
-					<li><a href="#">RESPONSIBILITY</a>
-						<div id="slider">
-							<section class="inner">
-							<ul>
-								<li><h3><a href="#">사회공헌 캠페인 소개</a></h3></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">지역 사회 참여 활동</a></h3></li>
-								<li><a href="#">희망배달 캠페인</a></li>
-								<li><a href="#">재능기부 카페 소식</a></li>
-								<li><a href="#">커뮤니티 스토어</a></li>
-								<li><a href="#">청년 지원 프로그램</a></li>
-								<li><a href="#">우리 농산물 사랑 캠페인</a></li>
-								<li><a href="#">우리 문화 지키기</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">환경보호 활동</a></h3></li>
-								<li><a href="#">친환경 활동</a></li>
-								<li><a href="#">일회용 컵 없는 매장</a></li>
-								<li><a href="#">커피 원두 재활용</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">윤리구매</a></h3></li>
-								<li><a href="#">윤리적 원두 구매</a></li>
-								<li><a href="#">공정무역 인증</a></li>
-								<li><a href="#">커피 농가 지원 활동</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">글로벌 사회 공헌</a></h3></li>
-								<li><a href="#">윤리경영 보고서</a></li>
-								<li><a href="#">스타벅스 재단</a></li>
-								<li><a href="#">지구촌 봉사의 달</a></li>
-							</ul>
-							</section>
-							<div class="under">
-								<section>
-									
-								</section>
-							</div>
-						</div>
-					</li>
-
-
-					<li><a href="#">STARBUCKS REWARDS</a>
-						<div id="slider">
-							<section class="inner">
-							<ul>
-								<li><h3><a href="#">스타벅스 리워드</a></h3></li>
-								<li><a href="#">스타벅스 리워드 소개</a></li>
-								<li><a href="#">등급 및 혜택</a></li>
-								<li><a href="#">스타벅스 별</a></li>
-								<li><a href="#">자주 하는 질문</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">스타벅스 카드</a></h3></li>
-								<li><a href="#">스타벅스 카드 소개</a></li>
-								<li><a href="#">스타벅스 카드 갤러리</a></li>
-								<li><a href="#">등록 및 조회</a></li>
-								<li><a href="#">충전 및 이용안내</a></li>
-								<li><a href="#">분실신고/환불신청</a></li>
-								<li><a href="#">자주 하는 질문</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">스타벅스 e-Gift Card</a></h3></li>
-								<li><a href="#">스타벅스 e-Gift Card 소개</a></li>
-								<li><a href="#">이용안내</a></li>
-								<li><a href="#">선물하기</a></li>
-								<li><a href="#">자주 하는 질문</a></li>
-							</ul>
-							</section>
-							<div class="under">
-								<section>
-							<ul class="down">
-								<li><h4><a href="#">스타벅스 카드 등록하기</a></h4></li>
-								<li class="green">카드 등록 후 리워드 서비스를 누리고 사용 내역도 조회해보세요.</li>
-							</ul>
-							</section>
-							</div>
-						</div>
-					</li>
-
-
-					<li><a href="#">WHAT'S NEW</a>
-						<div id="slider">
-							<section class="inner">
-							<ul>
-								<li><h3><a href="#">이벤트</a></h3></li>
-								<li><a href="#">전체</a></li>
-								<li><a href="#">스타버스 카드</a></li>
-								<li><a href="#">스타벅스 리워드</a></li>
-								<li><a href="#">온라인</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">뉴스</a></h3></li>
-								<li><a href="#">전체</a></li>
-								<li><a href="#">상품 출시</a></li>
-								<li><a href="#">스타벅스와 문화</a></li>
-								<li><a href="#">스타벅스 사회공헌</a></li>
-								<li><a href="#">스타벅스 카드출시</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">매장별 이벤트</a></h3></li>
-								<li><a href="#">일반 매장</a></li>
-								<li><a href="#">신규 매장</a></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">공지사항</a></h3></li>
-							</ul>
-							<ul>
-								<li><h3><a href="#">월페이퍼</a></h3></li>
-							</ul>
-							</section>
-							<div class="under">
-								<section>
-							<ul class="down">
-								<li><h4><a href="#">매장별 이벤트</a></h4></li>
-								<li class="green">스타벅스의 매장 이벤트 정보를 확인 하실 수 있습니다.</li>
-								<li><h4><a href="#">월페이퍼</a></h4></li>
-								<li class="green">매월 업데이트되는 월페이퍼(PC/Mobile)로 스타벅스를 더욱 가깝게 즐겨보세요!
-								</li>
-							</ul>
-							</section>
-						</div>
-						</div>
-					</li>
-
-				</ul>
-			</div>
-
-		</section>
-
-	</header>
+	<div id="header"></div>
 	<!-- 메인시작////////////////////////////////// -->
 
 	
@@ -497,7 +175,7 @@
 		</div>
 
 	</footer>
-
+	<script src="js/main.js"></script>
 </body>
 
 </html>
