--- a/header.html
+++ b/header.html
@@ -1,5 +1,7 @@
 <header>
-  <section>
+  <p class="border__top">
+  </p>
+  <section class="bg-inner">
     <h1 class="logo">
       <img src="img/logo.png" alt="스타벅스 로고">
     </h1>
@@ -75,7 +77,7 @@
             </section>
 
             <div class="under">
-              <section>
+              <section class="inner">
                 <ul class="down">
                   <li>
                     <h4><a href="#">나와 어울리는 커피 찾기</a></h4>
@@ -145,7 +147,7 @@
             </ul>
             </section>
             <div class="under">
-              <section>
+              <section class="inner">
             <ul class="down">
               <li><h4><a href="#">나이트로 콜드 브루<img src="" alt=""></a></h4></li>
               <li class="green">나이트로 커피 정통의 물결치듯 흘러내리는 캐스케이딩과 부드러운 크림을 경험하세요</li>
@@ -178,7 +180,7 @@
             </ul>
             </section>
             <div class="under">
-              <section>
+              <section class="inner">
             <ul class="down">
               <li><h4><a href="#">매장찾기</a></h4></li>
               <li class="green">보다 빠르게 매장을 찾아보세요</li>
@@ -224,7 +226,7 @@
             </ul>
             </section>
             <div class="under">
-              <section>
+              <section class="inner">
                 
               </section>
             </div>
@@ -260,7 +262,7 @@
             </ul>
             </section>
             <div class="under">
-              <section>
+              <section class="inner">
             <ul class="down">
               <li><h4><a href="#">스타벅스 카드 등록하기</a></h4></li>
               <li class="green">카드 등록 후 리워드 서비스를 누리고 사용 내역도 조회해보세요.</li>
@@ -302,7 +304,7 @@
             </ul>
             </section>
             <div class="under">
-              <section>
+              <section class="inner">
             <ul class="down">
               <li><h4><a href="#">매장별 이벤트</a></h4></li>
               <li class="green">스타벅스의 매장 이벤트 정보를 확인 하실 수 있습니다.</li>
