--- a/footer.html
+++ b/footer.html
@@ -46,6 +46,7 @@
       <li><a href="#">채용 지원하기</a></li>
     </ul>
   </div>
+  </section>
 
   <div class="award">
     <ul>
@@ -57,6 +58,9 @@
       <li><a href=""><img src="img/footer_award6.jpg" alt="동반성장위원회 위원장상"></a></li>
     </ul>
   </div>
+
+  
+  <section class="inner">
   <div class="bg">
 
     <ul class="copyright">
