--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 					<li>
 						<h2>공지사항</h2>
 					</li>
-					<li>
-						<ul class="notice-slide-up">
+					<li class="notice__slide-up">
+						<ul>
 							<li><a href="#">시스템 개선 및 점검 안내</a></li>
 							<li><a href="#">신세계 기프트 카드 등 결제 제휴 종료 안내</a></li>
 						</ul>
@@ -54,23 +54,26 @@
 
 			<div class="slide">
 				<ul>
-					<li><img src="img/slide-01.jpg" alt="추석 프로모션 배너"></li>
-					<li>자세히보기</li>
+					<li class="slide-banner"><img src="img/slide-01.jpg" alt="추석 프로모션 배너"></li>
+					<li class="more__btn">자세히 보기</li>
 				</ul>
 				<ul>
-					<li><img src="img/slide-02.jpg" alt="스타벅스 리저브 오텀 원두 배너"></li>
-					<li>자세히보기</li>
+					<li class="slide-banner"><img src="img/slide-02.jpg" alt="스타벅스 리저브 오텀 원두 배너"></li>
+					<li class="more__btn">자세히  보기</li>
 				</ul>
 				<ul>
-					<li><img src="img/slide-03.jpg" alt="스타벅스 카드 결제 프로모션"></li>
-					<li>자세히보기</li>
+					<li class="slide-banner"><img src="img/slide-03.jpg" alt="스타벅스 카드 결제 프로모션"></li>
+					<li class="more__btn">자세히 보기</li>
+					</ul>
+				<ul class="slide__btn">
+					<li class="prev">&gt;</li>
+					<li class="next">&lt;</li>
 				</ul>
 				</div>
 
-				<div class="slide-btn">
+				<div class="slide__play">
 					<ul>
-						<li class="prev">&gt;</li>
-						<li class="next">&lt;</li>
+					
 						<li class="play"><img src="img/main_prom_play.png"></li>
 						<li class="stop"><img src="img/main_prom_stop.png"></li>
 						<li><img src="img/main_prom_on.png"></li>
