--- a/header.html
+++ b/header.html
@@ -1,10 +1,11 @@
 <header>
+  <div class="web">
   <p class="border__top">
   </p>
   <section class="bg-inner">
     <h1 class="logo">
-      <img src="img/logo.png" alt="스타벅스 로고">
-    </h1>
+      <a href="#"><img src="img/logo.png" alt="스타벅스 로고">
+    </a></h1>
     <div class="menu">
       <ul class="top-menu">
         <li><a href="#">Sign In</a></li>
@@ -321,5 +322,14 @@
     </div>
 
   </section>
+  </div>
+  <div class="tablet">
+    <h1 class="tablet__logo"><a href="#"><img src="img/small_logo.png"></a></h1>
+    <ul class="tablet__icons">
+      <li class="tablet__icon"><a href="#"><img src="img/icon_user_m.png"></a></li>
+      <li class="tablet__icon"><a href="#"><img src="img/icon_spot_m.png"></a></li>
+      <li class="tablet__icon"><a href="#"><img src="img/btn_berger_m.png"></a></li>
+    </ul>
+  </div>
 
 </header>
