--- a/index.html
+++ b/index.html
@@ -53,32 +53,27 @@
 			</div>
 
 			<div class="slide">
-				<ul>
-					<li class="slide-banner"><img src="img/slide-01.jpg" alt="추석 프로모션 배너"></li>
-					<li class="more__btn">자세히 보기</li>
-				</ul>
-				<ul>
-					<li class="slide-banner"><img src="img/slide-02.jpg" alt="스타벅스 리저브 오텀 원두 배너"></li>
-					<li class="more__btn">자세히  보기</li>
-				</ul>
-				<ul>
-					<li class="slide-banner"><img src="img/slide-03.jpg" alt="스타벅스 카드 결제 프로모션"></li>
-					<li class="more__btn">자세히 보기</li>
+				<ul class="slide__item">
+					<li class="slide__banner"><img src="img/slide-01.jpg" alt="추석 프로모션 배너">
+					<span class="more__btn"><a href="#">자세히 보기</a></span></li>
+					<li class="slide__banner"><img src="img/slide-02.jpg" alt="스타벅스 리저브 오텀 원두 배너">
+						<span class="more__btn"><a href="#">자세히 보기</a></span></li>
+					<li class="slide__banner"><img src="img/slide-03.jpg" alt="스타벅스 카드 결제 프로모션">
+						<span class="more__btn"><a href="#">자세히 보기</a></span></li>
 					</ul>
 				<ul class="slide__btn">
-					<li class="prev">&gt;</li>
-					<li class="next">&lt;</li>
+					<li id="next">&gt;</li>
+					<li id="prev">&lt;</li>
 				</ul>
 				</div>
 
 				<div class="slide__play">
-					<ul>
-					
+					<ul class="slide__play__btn">
 						<li class="play"><img src="img/main_prom_play.png"></li>
 						<li class="stop"><img src="img/main_prom_stop.png"></li>
-						<li><img src="img/main_prom_on.png"></li>
-						<li><img src="img/main_prom_off.png"></li>
-						<li><img src="img/main_prom_off.png"></li>
+						<li class="off"><img src="img/main_prom_on.png"></li>
+						<li class="off"><img src="img/main_prom_off.png"></li>
+						<li class="off"><img src="img/main_prom_off.png"></li>
 					</ul>
 				
 			</div>
