--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Starbucks Korea</title>
-	<link rel="stylesheet" href="style/header.css">
-	<link rel="stylesheet" href="style/footer.css">
-	<link rel="stylesheet" href="style/main.css">
-	<link rel="stylesheet" href="style/reset.css">
+	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/footer.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/reset.css">
 	<script src="js/jquery-3.6.0.min.js"></script>
 	
-
-
 
 </head>
 
