header-mob__drop-menu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Starbucks Korea</title>
 	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/header-mob.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/reset.css">
@@ -16,6 +17,7 @@
 
 <body>
 	<div id="header"></div>
+	<div id="header-mob"></div>
 	<!-- 메인시작////////////////////////////////// -->
 
 	
