header-mob-slide

--- a/header-mob.html
+++ b/header-mob.html
@@ -8,7 +8,7 @@
 </head>
 <div id="header-mob">
   <div id="mob-menu">
-    <p class="close"><a href="#"><img src="img/btn_gnb_close.png" alt="메뉴닫기버튼"></a></p>
+    <p class="close"><img src="img/btn_gnb_close.png" alt="메뉴닫기버튼" onclick="HideMenu()"></a></p>
     <div class="mob-menu-slide">
 
 
