--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
       <ul class="tablet__icons">
         <li class="tablet__icon"><a href="#"><img src="img/icon_user_m.png"></a></li>
         <li class="tablet__icon"><a href="#"><img src="img/icon_spot_m.png"></a></li>
-        <li class="tablet__icon"><a href="#"><img src="img/btn_berger_m.png"></a></li>
+        <li class="tablet__icon" id="berger"><a href="#"><img src="img/btn_berger_m.png"></a></li>
       </ul>
     </div>
     
