folder structure repactoring

--- a/index.html
+++ b/index.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Starbucks Korea</title>
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Starbucks Korea</title>
+  <body>
+    <div id="header"></div>
+    <div id="header-mob"></div>
+    <!-- 메인시작////////////////////////////////// -->
 
-	<link rel="stylesheet" href="css/header.css">
-	<link rel="stylesheet" href="css/header-mob.css">
-	<link rel="stylesheet" href="css/footer.css">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <div class="main-banner-bg">
+      <ul class="main-coffee">
+        <li class="main-coffee__img1">
+          <img src="img/main-banner.png" alt="around autumn,around us" />
+        </li>
+        <li class="main-coffee__img2">
+          <img src="img/main-drink01.png" alt="블랙 글레이즈드 라떼" />
+        </li>
 
-	
+        <li class="main-coffee__img3">
+          <img src="img/main-drink02.png" alt="그린 애플 캐모마일 티" />
+        </li>
 
-</head>
+        <li class="main-coffee__img4">
+          <img src="img/main-drink03.png" alt="호두 블랙 티 라떼" />
+        </li>
+        <li class="txt-box"><a href="#">자세히 보기</a></li>
+      </ul>
+    </div>
 
+    <div class="notice">
+      <div class="notice-txt">
+        <ul class="notice-left">
+          <li>
+            <h2>공지사항</h2>
+          </li>
+          <li class="notice__slide-up">
+            <ul>
+              <li><a href="#">시스템 개선 및 점검 안내</a></li>
+              <li><a href="#">신세계 기프트 카드 등 결제 제휴 종료 안내</a></li>
+            </ul>
+          </li>
 
-<body>
-	<div id="header"></div>
-	<div id="header-mob"></div>
-	<!-- 메인시작////////////////////////////////// -->
-	
-
-	
-		<div class="main-banner-bg">
-			<ul class="main-coffee">
-				<li class="main-coffee__img1"><img src="img/main-banner.png" alt="around autumn,around us"></li>
-				<li class="main-coffee__img2"><img src="img/main-drink01.png" alt="블랙 글레이즈드 라떼"></li>
-				<li class="main-coffee__img3"><img src="img/main-drink02.png" alt="그린 애플 캐모마일 티"></li>
-				<li class="main-coffee__img4"><img src="img/main-drink03.png" alt="호두 블랙 티 라떼"></li>
-				<li class="txt-box"><a href="#">자세히 보기</a></li>
-			</ul>
-		</div>
-
-		<div class="notice">
-			<div class="notice-txt">
-				<ul class="notice-left">
-					<li>
-						<h2>공지사항</h2>
-					</li>
-					<li class="notice__slide-up">
-						<ul>
-							<li><a href="#">시스템 개선 및 점검 안내</a></li>
-							<li><a href="#">신세계 기프트 카드 등 결제 제휴 종료 안내</a></li>
-						</ul>
-					<li class="plus-btn"><a href="#">&plus;</a></li>
-				</ul>
-				<ul class="notice-right">
-					<li>
-						<h2>스타벅스 프로모션</h2>
-					</li>
-					<li><a href="#"><img src="img/btn_prom_up.png"></a></li>
-				</ul>
-			</div>
-			
+          <li class="plus-btn"><a href="#">&plus;</a></li>
+        </ul>
+        <ul class="notice-right">
+          <li>
+            <h2>스타벅스 프로모션</h2>
+          </li>
+          <li>
+            <a href="#"><img src="img/btn_prom_up.png" /></a>
+          </li>
+        </ul>
+      </div>
+      <!---
 
 
 			<div class="autoplay">
@@ -85,34 +87,38 @@
 						<li class="off"><img src="img/main_prom_off.png"></li>
 					</ul>
 				
-			</div>
-			<div class="autoplay">
-				<div><img src="img/slide-03.jpg" alt="스타벅스 카드 결제 프로모션">
-					<span class="more__btn"><a href="#">자세히 보기</a></span></div>
-		    <div><img src="img/slide-01.jpg" alt="추석 프로모션 배너">
-					<span class="more__btn"><a href="#">자세히 보기</a></span></div>
-		    <div><img src="img/slide-02.jpg" alt="스타벅스 리저브 오텀 원두 배너">
-					<span class="more__btn"><a href="#">자세히 보기</a></span></div>
-				<div><img src="img/slide-03.jpg" alt="스타벅스 카드 결제 프로모션">
-					<span class="more__btn"><a href="#">자세히 보기</a></span></div>
+			</div> -->
+      <div class="autoplay">
+        <div>
+          <img src="img/slide-03.jpg" alt="스타벅스 카드 결제 프로모션" />
+          <span class="more__btn"><a href="#">자세히 보기</a></span>
+        </div>
+        <div>
+          <img src="img/slide-01.jpg" alt="추석 프로모션 배너" />
+          <span class="more__btn"><a href="#">자세히 보기</a></span>
+        </div>
+        <div>
+          <img src="img/slide-02.jpg" alt="스타벅스 리저브 오텀 원두 배너" />
+          <span class="more__btn"><a href="#">자세히 보기</a></span>
+        </div>
+        <div>
+          <img src="img/slide-03.jpg" alt="스타벅스 카드 결제 프로모션" />
+          <span class="more__btn"><a href="#">자세히 보기</a></span>
+        </div>
+      </div>
+    </div>
 
-			</div>
+    <div id="footer"></div>
+  </body>
 
-
-		</div>
-
-
-
-	<div id="footer"></div>
-</body>
-	
-
-
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="slick/slick.min.js"></script>
-<script src="js/main.js"></script>
-
-
-
+  <script
+    type="text/javascript"
+    src="//code.jquery.com/jquery-1.11.0.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+  ></script>
+  <script type="text/javascript" src="js/slick.js"></script>
+  <script src="js/main.js"></script>
 </html>
